[gd_scene load_steps=22 format=3 uid="uid://xgut27qtlpbd"]

[ext_resource type="Script" uid="uid://bflh4x8wu5ha6" path="res://classes/player/player.gd" id="1_jpa1g"]
[ext_resource type="PackedScene" uid="uid://2gtaxxvwtitn" path="res://components/chat_bubble/chat_bubble_manager.tscn" id="2_634de"]
[ext_resource type="Script" uid="uid://pj5y64im6vua" path="res://classes/player/player_movement.gd" id="3_45urx"]
[ext_resource type="Script" uid="uid://ckjkgvmrct0fl" path="res://classes/player/player_state_machine.gd" id="3_iula3"]
[ext_resource type="Script" uid="uid://dvxu1h32y12r4" path="res://classes/player/player_states/unarmed_idle_state.gd" id="4_s60wy"]
[ext_resource type="Script" uid="uid://ib2ghq7y4gdb" path="res://classes/player/player_states/move_state.gd" id="5_td0ib"]
[ext_resource type="Script" uid="uid://dcb11p82v1h66" path="res://classes/player/player_states/interact_state.gd" id="6_6725j"]
[ext_resource type="Script" uid="uid://chawfigbbwn45" path="res://classes/player/player_states/unarmed_crouch_idle_state.gd" id="6_xlkbi"]
[ext_resource type="Script" uid="uid://bhb23oshl2yxq" path="res://classes/player/player_states/rifle_down_idle_state.gd" id="7_6725j"]
[ext_resource type="Script" uid="uid://dweks61qqwx50" path="res://classes/player/player_animator.gd" id="7_td0ib"]
[ext_resource type="Script" uid="uid://dnyl6g0hdrkme" path="res://classes/player/player_states/rifle_aim_idle_state.gd" id="8_4ka5w"]
[ext_resource type="Script" uid="uid://dr0x30oqyyfjk" path="res://classes/player/player_audio.gd" id="10_jm32w"]
[ext_resource type="Script" uid="uid://hbfve37uavsw" path="res://classes/player/player_states/dead_state.gd" id="10_ylcck"]
[ext_resource type="Script" uid="uid://11vyhkx2sqk4" path="res://classes/player/player_states/rifle_crouch_down_idle_state.gd" id="11_dthqj"]
[ext_resource type="Script" uid="uid://cyqk3p6o7qlpf" path="res://classes/player/player_equipment.gd" id="11_psowp"]
[ext_resource type="Script" uid="uid://b386r8xhr3g43" path="res://classes/player/player_states/rifle_crouch_aim_idle_state.gd" id="12_xlkbi"]
[ext_resource type="Script" uid="uid://bj3ahj1d4q5pq" path="res://classes/player/player_packets.gd" id="13_c34wb"]
[ext_resource type="Script" uid="uid://bscnqm2gbffuw" path="res://classes/player/player_actions.gd" id="14_45rsp"]

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_dthqj"]
resource_local_to_scene = true
radius = 0.07
height = 1.8

[sub_resource type="CylinderShape3D" id="CylinderShape3D_xlkbi"]
resource_local_to_scene = true
height = 0.3
radius = 0.15

[sub_resource type="CylinderShape3D" id="CylinderShape3D_l55sg"]
resource_local_to_scene = true
height = 1.5
radius = 0.25

[node name="Player" type="CharacterBody3D"]
collision_layer = 2
script = ExtResource("1_jpa1g")

[node name="PlayerCollisionShape" type="CollisionShape3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.9, 0)
shape = SubResource("CapsuleShape3D_dthqj")
debug_color = Color(0, 0.6, 0.701961, 1)

[node name="HeadArea3D" type="Area3D" parent="." groups=["headshot_material"]]
collision_layer = 2

[node name="HeadCollisionShape" type="CollisionShape3D" parent="HeadArea3D"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.65, 0)
shape = SubResource("CylinderShape3D_xlkbi")
debug_color = Color(100, 0, 0, 0.42)

[node name="BodyArea3D" type="Area3D" parent="." groups=["body_material"]]
collision_layer = 2

[node name="BodyCollisionShape" type="CollisionShape3D" parent="BodyArea3D"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.75, 0)
shape = SubResource("CylinderShape3D_l55sg")
debug_color = Color(0, 100, 0, 0.42)

[node name="Model" type="Node3D" parent="."]

[node name="CameraPivot" type="Node3D" parent="."]

[node name="CameraRig" type="Node3D" parent="CameraPivot"]
transform = Transform3D(1, 0, 0, 0, 0.819151, 0.573576, 0, -0.573576, 0.819151, 0, 4, 4)

[node name="ChatBubbleOrigin" type="Node3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 2.1, 0)

[node name="ChatBubbleManager" parent="ChatBubbleOrigin" instance=ExtResource("2_634de")]

[node name="PlayerMovement" type="Node" parent="."]
script = ExtResource("3_45urx")
metadata/_custom_type_script = "uid://pj5y64im6vua"

[node name="PlayerStateMachine" type="Node" parent="."]
script = ExtResource("3_iula3")
metadata/_custom_type_script = "uid://ckjkgvmrct0fl"

[node name="UnarmedIdleState" type="Node" parent="PlayerStateMachine"]
script = ExtResource("4_s60wy")
metadata/_custom_type_script = "uid://dvxu1h32y12r4"

[node name="UnarmedCrouchIdleState" type="Node" parent="PlayerStateMachine"]
script = ExtResource("6_xlkbi")
metadata/_custom_type_script = "uid://chawfigbbwn45"

[node name="MoveState" type="Node" parent="PlayerStateMachine"]
script = ExtResource("5_td0ib")
metadata/_custom_type_script = "uid://ib2ghq7y4gdb"

[node name="InteractState" type="Node" parent="PlayerStateMachine"]
script = ExtResource("6_6725j")
metadata/_custom_type_script = "uid://dcb11p82v1h66"

[node name="DeadState" type="Node" parent="PlayerStateMachine"]
script = ExtResource("10_ylcck")
metadata/_custom_type_script = "uid://hbfve37uavsw"

[node name="RifleDownIdleState" type="Node" parent="PlayerStateMachine"]
script = ExtResource("7_6725j")
metadata/_custom_type_script = "uid://bhb23oshl2yxq"

[node name="RifleAimIdleState" type="Node" parent="PlayerStateMachine"]
script = ExtResource("8_4ka5w")
metadata/_custom_type_script = "uid://dnyl6g0hdrkme"

[node name="RifleCrouchDownIdleState" type="Node" parent="PlayerStateMachine"]
script = ExtResource("11_dthqj")
metadata/_custom_type_script = "uid://11vyhkx2sqk4"

[node name="RifleCrouchAimIdleState" type="Node" parent="PlayerStateMachine"]
script = ExtResource("12_xlkbi")
metadata/_custom_type_script = "uid://b386r8xhr3g43"

[node name="PlayerAnimator" type="Node" parent="."]
script = ExtResource("7_td0ib")
metadata/_custom_type_script = "uid://dweks61qqwx50"

[node name="PlayerAudio" type="Node3D" parent="."]
script = ExtResource("10_jm32w")
metadata/_custom_type_script = "uid://dr0x30oqyyfjk"

[node name="PlayerEquipment" type="Node" parent="."]
script = ExtResource("11_psowp")
metadata/_custom_type_script = "uid://cyqk3p6o7qlpf"

[node name="PlayerPackets" type="Node" parent="."]
script = ExtResource("13_c34wb")
metadata/_custom_type_script = "uid://bj3ahj1d4q5pq"

[node name="PlayerActions" type="Node" parent="."]
script = ExtResource("14_45rsp")
metadata/_custom_type_script = "uid://bscnqm2gbffuw"
